[gd_scene load_steps=1 format=3 uid="uid://dpxt3k1amgw5o"]

[ext_resource type="Script" path="res://game/scenes/hud/GameHUD.gd" id="1_hud_script"]

[node name="GameHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_hud_script")

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = -80.0
max_value = 100.0
value = 100.0

[node name="HealthText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 300.0
offset_bottom = -60.0
text = "100/100 (100%)"
horizontal_alignment = 1

[node name="FPSLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
text = "FPS: 60"
horizontal_alignment = 2

[node name="MovementKeys" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 120.0

[node name="ConsoleLogs" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 130.0
offset_right = 400.0
offset_bottom = 300.0
